--- a/0.md
+++ b/0.md
@@ -1,4 +1,4 @@
-#  Introduction – מבוא לפייתון
+##  מבוא לפייתון 📘
 
 ## ✨ הסבר בעברית פשוטה (כמו לילד קטן)
 תחשבו על פייתון כמו על שפה חדשה, אבל במקום לדבר עם אנשים – אתם מדברים עם המחשב.  
