--- a/0.md
+++ b/0.md
@@ -1,4 +1,6 @@
-##  מבוא לפייתון 📘
+# 📄 01_introduction.md
+
+# 📘 Introduction – מבוא לפייתון
 
 ## ✨ הסבר בעברית פשוטה (כמו לילד קטן)
 תחשבו על פייתון כמו על שפה חדשה, אבל במקום לדבר עם אנשים – אתם מדברים עם המחשב.  
@@ -15,14 +17,12 @@
 ## 🔍 הסברים ודוגמאות
 
 ### מה זה פייתון?
-פייתון היא שפת תכנות ברמה גבוהה, עם תחביר פשוט שמזכיר אנגלית.  
-היא משמשת בתחומים כמו בניית אתרים, ניתוח נתונים, אוטומציה, בינה מלאכותית ועוד.
+פייתון היא שפת תכנות שנוצרה כדי להיות פשוטה להבנה, עם תחביר שנראה כמעט כמו אנגלית.
 
-### למה ללמוד פייתון?
-- מאוד קלה ללמידה  
-- יש לה קהילה ענקית וחומרי לימוד רבים  
-- מתאימה לפרויקטים אמיתיים בכל תחום  
-- נראית כמו אנגלית – קל לקרוא ולהבין  
+### למה ללמוד דווקא פייתון?
+- היא קלה ללמידה – התחביר ברור.  
+- מתאימה לכל תחום: בניית אתרים, בינה מלאכותית, אוטומציות, משחקים ועוד.  
+- יש לה קהילה ענקית עם אינסוף מדריכים וחומרי לימוד.
 
 ### שורת הקוד הראשונה – Hello World
 ```python
@@ -30,8 +30,8 @@ print("Hello, world!")
 ```
 
 ### הסבר:
-- `print()` היא פונקציה שמדפיסה טקסט למסך  
-- מה שנמצא בתוך גרשיים יוצג בדיוק כפי שהוא  
+- `print()` זו פונקציה שמדפיסה למסך.  
+- כל מה שנמצא בתוך הגרשיים – יופיע במסך.  
 
 ### דוגמה נוספת:
 ```python
@@ -40,17 +40,11 @@ print("I love Python!")
 ```
 
 ## 💡 טיפים ותוספות מתקדמות
-- קבצי פייתון מסתיימים ב־`.py`  
-- אפשר להשתמש בעורכי קוד אונליין כמו:  
-  - https://replit.com  
-  - https://www.programiz.com/python-programming/online-compiler  
-- אם מתקינים במחשב, יש להוריד מ־https://www.python.org  
-- כתבו את כל שמות המשתנים והקוד באנגלית בלבד – זהו סטנדרט בתכנות  
+- קבצים של פייתון מסתיימים ב־`.py`  
+- מומלץ להשתמש בעורכים אונליין כמו https://replit.com/ או להתקין את פייתון מהמחשב האישי דרך https://python.org  
+- שמרו על שמות משתנים, פונקציות וטקסטים בקוד באנגלית בלבד
 
 ## ✅ בדוק את עצמך
 1. מה עושה הפונקציה `print()`?  
-2. מה ההבדל בין מחרוזת (כמו `"Hello"`) לבין מספר (כמו `5`)?  
+2. מה ההבדל בין מחרוזת לבין מספר?  
 3. מה יקרה אם תכתבו `print(Hello)` בלי גרשיים?
-
-## 🧩 קבצים נלווים
-אין צורך בקבצים חיצוניים בפרק זה.
