--- a/01.0_introduction.md
+++ b/01.0_introduction.md
@@ -1,6 +1,6 @@
 # 📘 מבוא לפייתון
 
-## ✨ הסבר בעברית פשוטה (כמו לילד קטן)
+## ✨ הסבר
 תחשבו על פייתון כמו על שפה חדשה, אבל במקום לדבר עם אנשים – אתם מדברים עם המחשב.  
 במקום לומר "תדליק את האור", אתם כותבים שורות של קוד והמחשב עושה בדיוק מה שביקשתם.  
 פייתון היא שפה קלה, ידידותית, ואפשר לעשות איתה כמעט הכל – ממש כמו לגו לעולם התכנות!
