--- a/02.0_syntax.md
+++ b/02.0_syntax.md
@@ -1,6 +1,6 @@
 # 📘 תחביר – Syntax
 
-## ✨ הסבר בעברית פשוטה (כמו לילד קטן)
+## ✨ הסבר
 תחביר זה כמו כללי המשחק. בדיוק כמו שבמשחק צריך לדעת מתי תורכם ומתי אסור לעבור קו – גם בפייתון יש חוקים ברורים. אם שומרים עליהם – הקוד רץ חלק. אם לא – מקבלים שגיאה מהמחשב.
 
 ## 🧠 מה נלמד בפרק הזה?
