--- a/3.0_variables.md
+++ b/3.0_variables.md
@@ -1,6 +1,6 @@
 # 📘 משתנים – Variables
 
-## ✨ הסבר בעברית פשוטה (כמו לילד קטן)
+## ✨ הסבר
 משתנה הוא כמו קופסה שיש לה שם – ואנחנו יכולים לשים בתוכה משהו.  
 אפשר לשים שם מילה, מספר, או כל דבר אחר. וכל פעם שנרצה להשתמש במה ששמנו – פשוט נשתמש בשם של הקופסה!
 
