--- a/4.0_data_types.md
+++ b/4.0_data_types.md
@@ -1,6 +1,6 @@
 # 📘 סוגי נתונים – Data Types
 
-## ✨ הסבר בעברית פשוטה (כמו לילד קטן)
+## ✨ הסבר
 לכל דבר שאנחנו שומרים במחשב יש סוג – כמו שמים הם נוזל, ואבן היא מוצק.  
 בפייתון, מספרים הם סוג אחד, מילים הם סוג אחר, ורשימות הן משהו שלישי לגמרי.  
 אם נזהה נכון את הסוג של כל דבר – נוכל לעשות איתו בדיוק את מה שאנחנו רוצים.
