--- a/6.0_strings.md
+++ b/6.0_strings.md
@@ -1,6 +1,6 @@
 # 📘 מחרוזות – Strings
 
-## ✨ הסבר בעברית פשוטה (כמו לילד קטן)
+## ✨ הסבר
 מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים – כמו שם, משפט, או אפילו רווח.  
 בפייתון אנחנו כותבים מחרוזות בתוך גרשיים, וככה המחשב יודע שזה טקסט ולא מספר.
 
