--- a/03_control_flow/01.0_if_else.md
+++ b/03_control_flow/01.0_if_else.md
@@ -2,7 +2,7 @@
 
 # 📘 תנאים – If...Else
 
-## ✨ הסבר בעברית פשוטה (כמו לילד קטן)
+## ✨ הסבר 
 לפעמים אנחנו רוצים שהמחשב יבחר מה לעשות – אם משהו נכון, אז תעשה פעולה מסוימת, ואם לא – תעשה משהו אחר.  
 בדיוק כמו שאמא אומרת: "אם סיימת את שיעורי הבית – תלך לשחק, אחרת תישאר בבית".  
 
