--- a/11_oop_intro/02.0_init_function.md
+++ b/11_oop_intro/02.0_init_function.md
@@ -22,6 +22,7 @@ class Dog:
 ### מחלקה עם אתחול – `__init__`
 ```python
 class Dog:
+# name, age = instance (דוגמה/פרמטר)
     def __init__(self, name, age):
         self.name = name
         self.age = age
