--- a/11_oop_intro/02.0_init_function.md
+++ b/11_oop_intro/02.0_init_function.md
@@ -29,6 +29,9 @@ class Dog:
 
     def bark(self):
         print(f"{self.name} says Woof!")
+
+    def sleep(self, hour):
+        print(f"{self.name} went to sleep for {hour} hours!")
 ```
 
 ### יצירת אובייקט עם ערכים
@@ -37,6 +40,7 @@ my_dog = Dog("Max", 3)
 print(my_dog.name)  # Output: Max
 print(my_dog.age)   # Output: 3
 my_dog.bark()       # Output: Max says Woof!
+my_dog.sleep(4)     # Max went to sleep for 4 hours!
 ```
 
 ## 💡 טיפים מתקדמים
