--- a/12.0_iterators_magic_methods/12.2_iterators_magic_methods_solutions.md
+++ b/12.0_iterators_magic_methods/12.2_iterators_magic_methods_solutions.md
@@ -21,3 +21,142 @@ class RangePrinter:
 
 for number in RangePrinter(1, 5):
     print(number)
+````
+
+### תרגיל 2 – Reverser
+
+```python
+class Reverser:
+    def __init__(self, text):
+        self.text = text
+        self.index = len(text) - 1
+
+    def __iter__(self):
+        return self
+
+    def __next__(self):
+        if self.index < 0:
+            raise StopIteration
+        char = self.text[self.index]
+        self.index -= 1
+        return char
+
+for char in Reverser("Python"):
+    print(char)
+```
+
+### תרגיל 3 – Person with Magic Methods
+
+```python
+class Person:
+    def __init__(self, name, age):
+        self.name = name
+        self.age = age
+
+    def __str__(self):
+        return f"{self.name}, {self.age} years old"
+
+    def __repr__(self):
+        return f"Person('{self.name}', {self.age})"
+
+    def __eq__(self, other):
+        return self.name == other.name and self.age == other.age
+
+    def __lt__(self, other):
+        return self.age < other.age
+
+p1 = Person("Alice", 30)
+p2 = Person("Bob", 25)
+print(str(p1))
+print(repr(p1))
+print(p1 == p2)
+print(p1 < p2)
+```
+
+### תרגיל 4 – **add** למחלקת Person
+
+```python
+def __add__(self, other):
+    return Person(f"{self.name} & {other.name}", self.age + other.age)
+
+# יש להוסיף את המתודה למחלקת Person שהוגדרה קודם
+p3 = p1 + p2
+print(p3)
+```
+
+### תרגיל 5 – NumberList
+
+```python
+class NumberList:
+    def __init__(self, data):
+        self.data = data
+
+    def __getitem__(self, index):
+        return self.data[index]
+
+    def __setitem__(self, index, value):
+        self.data[index] = value
+
+    def __len__(self):
+        return len(self.data)
+
+nl = NumberList([1, 2, 3])
+print(nl[0])
+nl[1] = 10
+print(nl[1])
+print(len(nl))
+```
+
+### תרגיל 6 – Dice
+
+```python
+import random
+
+class Dice:
+    def __call__(self):
+        return random.randint(1, 6)
+
+roll = Dice()
+print(roll())
+print(roll())
+```
+
+### תרגיל 7 – MathVector
+
+```python
+class MathVector:
+    def __init__(self, x, y):
+        self.x = x
+        self.y = y
+
+    def __add__(self, other):
+        return MathVector(self.x + other.x, self.y + other.y)
+
+    def __repr__(self):
+        return f\"MathVector({self.x}, {self.y})\"
+
+v1 = MathVector(2, 3)
+v2 = MathVector(1, 4)
+print(v1 + v2)
+```
+
+### תרגיל 8 – **contains**
+
+```python
+class WordBank:
+    def __init__(self, words):
+        self.words = words
+
+    def __contains__(self, word):
+        return word in self.words
+
+bank = WordBank([\"apple\", \"banana\", \"cherry\"])
+print(\"banana\" in bank)  # True
+print(\"grape\" in bank)   # False
+```
+
+## 💬 הערות כלליות
+
+* איטרטורים מאפשרים שליטה מלאה על התקדמות בלולאות
+* שימוש ב־`__call__`, `__add__`, `__getitem__`, ועוד הופך את המחלקות ליותר אינטואיטיביות
+* חשוב להבין שכל מתודת קסם מתאימה למקרה שימוש אחר – לא תמיד צריך את כולן
