--- a/12.0_iterators_magic_methods/00.00_iterators_magic_methods.md
+++ b/12.0_iterators_magic_methods/00.00_iterators_magic_methods.md
@@ -2,7 +2,7 @@
 
 ## ✨ הסבר
 
-איטרטורים הם דרך של פייתון לעבור על פריטים אחד-אחד, כמו בלולאות. מתודות "קסם" (או dunder methods) הן פונקציות עם שמות מיוחדים שמתחילות ומסתיימות בשני קווים תחתונים (__-__ככה__-__). הן משמשות להגדיר איך אובייקטים מתנהגים במצבים שונים, למשל כשהם מודפסים, מושווים או נאכלים בלולאה.
+איטרטורים הם דרך של פייתון לעבור על פריטים אחד-אחד, כמו בלולאות. מתודות "קסם" (או dunder methods) הן פונקציות עם שמות מיוחדים שמתחילות ומסתיימות בשני קווים תחתונים (`__ככה__`). הן משמשות להגדיר איך אובייקטים מתנהגים במצבים שונים, למשל כשהם מודפסים, מושווים או נאכלים בלולאה.
 
 ## 🧠 מה נלמד בפרק הזה?
 - מה זה iterable ומה זה iterator
