--- a/10_built_in_functions/02.0_mutable_vs_immutable.md
+++ b/10_built_in_functions/02.0_mutable_vs_immutable.md
@@ -37,6 +37,7 @@ print("Outside:", numbers)  # משתנה גם מבחוץ
 ```
 🔸 טבלת השוואה – טיפוסים פרימיטיביים לעומת לא
 טיפוס	פרימיטיבי?	Mutable?	דוגמה
+```python
 int	כן	❌	x = 5
 float	כן	❌	x = 3.14
 str	כן	❌	s = "hi"
@@ -45,6 +46,7 @@ tuple	כן	❌	t = (1, 2)
 list	לא	✔️	l = [1, 2]
 dict	לא	✔️	d = {"a": 1}
 set	לא	✔️	s = {1, 2}
+```
 
 💡 טיפים מתקדמים
 כל שינוי ב־Immutable יוצר אובייקט חדש בזיכרון.
