--- a/10_built_in_functions/02.0_mutable_vs_immutable.md
+++ b/10_built_in_functions/02.0_mutable_vs_immutable.md
@@ -20,11 +20,12 @@ def add_one(num):
     num += 1
     print("Inside:", num)
 
-
 add_one(x)
 print("Outside:", x)  # עדיין 10
-```
-🔸 מה זה טיפוס שניתן לשינוי – Mutable
+````
+
+### 🔸 מה זה טיפוס שניתן לשינוי – Mutable
+
 ```python
 numbers = [1, 2, 3]
 
@@ -35,28 +36,28 @@ def append_value(lst):
 append_value(numbers)
 print("Outside:", numbers)  # משתנה גם מבחוץ
 ```
-🔸 טבלת השוואה – טיפוסים פרימיטיביים לעומת לא
-טיפוס	פרימיטיבי?	Mutable?	דוגמה
-```python
-int	כן	❌	x = 5
-float	כן	❌	x = 3.14
-str	כן	❌	s = "hi"
-bool	כן	❌	b = True
-tuple	כן	❌	t = (1, 2)
-list	לא	✔️	l = [1, 2]
-dict	לא	✔️	d = {"a": 1}
-set	לא	✔️	s = {1, 2}
-```
 
-💡 טיפים מתקדמים
-כל שינוי ב־Immutable יוצר אובייקט חדש בזיכרון.
+### 🔸 טבלת השוואה – טיפוסים פרימיטיביים לעומת לא
 
-טיפוס tuple הוא בלתי משתנה, אבל אם הוא כולל רשימה בפנים – הרשימה כן תשתנה.
+| טיפוס   | פרימיטיבי? | Mutable? | דוגמה          |
+| ------- | ---------- | -------- | -------------- |
+| `int`   | כן         | ❌        | `x = 5`        |
+| `float` | כן         | ❌        | `x = 3.14`     |
+| `str`   | כן         | ❌        | `s = "hi"`     |
+| `bool`  | כן         | ❌        | `b = True`     |
+| `tuple` | כן         | ❌        | `t = (1, 2)`   |
+| `list`  | לא         | ✔️       | `l = [1, 2]`   |
+| `dict`  | לא         | ✔️       | `d = {"a": 1}` |
+| `set`   | לא         | ✔️       | `s = {1, 2}`   |
 
-אפשר לבדוק זהות בזיכרון עם id() כדי לראות אם באמת נוצר אובייקט חדש.
+## 💡 טיפים מתקדמים
 
-✅ בדוק את עצמך
-מה יקרה אם נשנה מחרוזת בתוך פונקציה – האם המקור ישתנה?
+* כל שינוי ב־Immutable יוצר אובייקט חדש בזיכרון.
+* טיפוס `tuple` הוא בלתי משתנה, אבל אם הוא כולל רשימה בפנים – הרשימה כן תשתנה.
+* אפשר לבדוק זהות בזיכרון עם `id()` כדי לראות אם באמת נוצר אובייקט חדש.
 
-איזו התנהגות תקרה אם נעביר מילון לפונקציה ונשנה אותו?
+## ✅ בדוק את עצמך
 
+1. מה יקרה אם נשנה מחרוזת בתוך פונקציה – האם המקור ישתנה?
+2. איזו התנהגות תקרה אם נעביר מילון לפונקציה ונשנה אותו?
+3. האם `tuple` תמיד בלתי משתנה?
