--- a/11_oop_intro/06.0_multiple_inheritance_abstract.md
+++ b/11_oop_intro/06.0_multiple_inheritance_abstract.md
@@ -94,6 +94,10 @@ class Human(Eater, Walker):
 
     def walk(self):
         print("Walking")
+
+h = Human()
+h.eat()   # Eating
+h.walk()  # Walking
 ```
 
 ## 💡 טיפים מתקדמים
