--- a/11_oop_intro/06.0_multiple_inheritance_abstract.md
+++ b/11_oop_intro/06.0_multiple_inheritance_abstract.md
@@ -78,26 +78,53 @@ class Dog(Animal):
 ```python
 from abc import ABC, abstractmethod
 
+# רמה 1 – מחלקות בסיס
 class Eater(ABC):
     @abstractmethod
     def eat(self):
         pass
 
-class Walker(ABC):
+class Mover(ABC):
     @abstractmethod
-    def walk(self):
+    def move(self):
         pass
 
-class Human(Eater, Walker):
+# רמה 2 – מחלקות ביניים
+class Walker(Mover):
+    def move(self):
+        print("Walking")  # כאן ממומשת move
+
+    def track_steps(self):
+        print("Tracking steps...")  # לא תיכנס למחלקה הסופית אם לא תקרא
+
+class Swimmer(Mover):
+    def move(self):
+        print("Swimming")
+
+    def hold_breath(self):
+        print("Holding breath...")  # גם זו לא תיכנס אם לא נקרא לה
+
+# רמה 3 – מחלקה סופית
+class Human(Eater, Walker, Swimmer):
     def eat(self):
-        print("Eating")
+        print("Eating food")
 
-    def walk(self):
-        print("Walking")
+    # לא מממשים move כי זה כבר ממומש ב־Walker → לפי סדר MRO תיקח מ־Walker
 
+    def think(self):
+        print("Thinking deeply")  # מתודה רגילה לחלוטין
+
+# יצירת מופע
 h = Human()
-h.eat()   # Eating
-h.walk()  # Walking
+
+# קריאות למתודות הראשיות
+h.eat()         # Eating food
+h.move()        # Walking – לפי סדר הירושה
+h.think()       # Thinking deeply
+
+# המתודות הבאות לא יהיו זמינות אם לא נקרא להן ישירות או נוריש אותן
+# h.track_steps()     ❌ AttributeError – לא עברה הלאה
+# h.hold_breath()     ❌ AttributeError – לא עברה הלאה
 ```
 
 ## 💡 טיפים מתקדמים
