--- a/11_oop_intro/06.0_multiple_inheritance_abstract.md
+++ b/11_oop_intro/06.0_multiple_inheritance_abstract.md
@@ -92,39 +92,46 @@ class Mover(ABC):
 # רמה 2 – מחלקות ביניים
 class Walker(Mover):
     def move(self):
-        print("Walking")  # כאן ממומשת move
+        print("Walking")
+        super().move()
 
     def track_steps(self):
-        print("Tracking steps...")  # לא תיכנס למחלקה הסופית אם לא תקרא
+        print("Tracking steps...")
 
 class Swimmer(Mover):
     def move(self):
         print("Swimming")
+        super().move()
 
     def hold_breath(self):
-        print("Holding breath...")  # גם זו לא תיכנס אם לא נקרא לה
+        print("Holding breath...")
 
 # רמה 3 – מחלקה סופית
-class Human(Eater, Walker, Swimmer):
+class Human(Walker, Swimmer, Eater):
     def eat(self):
         print("Eating food")
 
-    # לא מממשים move כי זה כבר ממומש ב־Walker → לפי סדר MRO תיקח מ־Walker
+    def move(self):
+        print("Human is starting to move:")
+        super().move()  # יקרא ל־Walker → Swimmer
 
     def think(self):
-        print("Thinking deeply")  # מתודה רגילה לחלוטין
+        print("Thinking deeply")
+
+    def do_sports(self):
+        self.track_steps()
+        self.hold_breath()
 
 # יצירת מופע
 h = Human()
 
 # קריאות למתודות הראשיות
-h.eat()         # Eating food
-h.move()        # Walking – לפי סדר הירושה
-h.think()       # Thinking deeply
+h.eat()        # Eating food
+h.move()       # Human → Walking → Swimming
+h.think()      # Thinking deeply
 
-# המתודות הבאות לא יהיו זמינות אם לא נקרא להן ישירות או נוריש אותן
-# h.track_steps()     ❌ AttributeError – לא עברה הלאה
-# h.hold_breath()     ❌ AttributeError – לא עברה הלאה
+# קריאה למתודות שלא עברו בירושה – דרך wrapper
+h.do_sports()  # Tracking steps... + Holding breath...
 ```
 
 ## 💡 טיפים מתקדמים
