--- a/09_error_handling/01.0_try_except.md
+++ b/09_error_handling/01.0_try_except.md
@@ -41,12 +41,12 @@ except Exception as e:
 ### מספר בלוקים של except
 ```python
 try:
-    name = input("Enter your name: ")
+    name = int(input("Enter your name: "))
     print("Hello", name)
-except ValueError:
-    print("Invalid value")
+#except ValueError:
+    #print("Invalid value")
 except Exception as e:
-    print("Unknown error:", e)
+    print("Error:", e)
 ```
 
 ## 💡 טיפים מתקדמים
