--- a/09_error_handling/02.0_finally.md
+++ b/09_error_handling/02.0_finally.md
@@ -25,14 +25,21 @@ finally:
 
 ### עם קבצים
 ```python
+file = None  # אתחול משתנה מראש – חובה כדי למנוע שגיאה ב-finally
+
 try:
-    file = open("data.txt", "r")
+    file = open("data.txt", "r")  # מנסה לפתוח את הקובץ
     content = file.read()
 except FileNotFoundError:
-    print("File not found")
+    print("File not found")  # תופס אם הקובץ לא קיים
+except Exception as e:
+    print("Another error occurred:", e)  # לכל שגיאה אחרת
 finally:
-    file.close()
-    print("File closed")
+    print("Entered finally block ✅")  # נוכל לראות אם נכנסנו לכאן
+    if file is not None:
+        file.close()
+        print("File closed ✅")
+
 ```
 
 ### דוגמה מלאה
