--- a/09_error_handling/04.0_exceptions.md
+++ b/09_error_handling/04.0_exceptions.md
@@ -98,15 +98,20 @@ def divide(a, b):
 4. מה ההבדל בין try-except לבין בדיקת תנאי עם if?
 5. איך ניתן להציג את פרטי השגיאה למשתמש?
 
+---
 
+## 🔍 ההבדל בין `try-except` ל־`if`
 
-🔍 ההבדל בין try-except ל־if
-תכונה	if	try-except
-מה בודקים?	תנאים רגילים שהמתכנת יכול לצפות מראש	שגיאות שלא תמיד ניתן לחזות מראש
-מתי משתמשים?	כשהקלטים צפויים ואתה רוצה לשלוט בלוגיקה	כשיש סיכון לפעולה שיכולה להיכשל (קבצים, חישובים, APIs)
-התנהגות	בודק תנאי → ממשיך לפי תוצאה	מריץ את הקוד → אם יש שגיאה – עובר ל־except
+| תכונה            | `if`                                    | `try-except`                                           |
+| ---------------- | --------------------------------------- | ------------------------------------------------------ |
+| **מה בודקים?**   | תנאים רגילים שהמתכנת יכול לצפות מראש    | שגיאות שלא תמיד ניתן לחזות מראש                        |
+| **מתי משתמשים?** | כשהקלטים צפויים ואתה רוצה לשלוט בלוגיקה | כשיש סיכון לפעולה שיכולה להיכשל (קבצים, חישובים, APIs) |
+| **התנהגות**      | בודק תנאי → ממשיך לפי תוצאה             | מריץ את הקוד → אם יש שגיאה – עובר ל־`except`           |
 
-📘 דוגמה עם if
+---
+
+## 📘 דוגמה עם `if`
+
 ```python
 age = -5
 if age < 0:
@@ -114,10 +119,14 @@ if age < 0:
 else:
     print("Valid age")
 ```
-✔️ נבדק מראש – עובד טוב כשאנחנו יודעים למה לצפות
-❌ לא יתפוס דברים לא צפויים כמו טיפוסים לא נכונים ("abc" במקום מספר)
 
-📘 דוגמה עם try-except
+✔️ נבדק מראש – עובד טוב כשאנחנו יודעים למה לצפות
+❌ לא יתפוס דברים לא צפויים כמו טיפוסים לא נכונים (`"abc"` במקום מספר)
+
+---
+
+## 📘 דוגמה עם `try-except`
+
 ```python
 try:
     age = int(input("Enter age: "))
@@ -125,16 +134,17 @@ try:
 except ValueError:
     print("Invalid input – not a number")
 ```
+
 ✔️ יתפוס גם שגיאות לא צפויות, כמו ניסיון להמיר מחרוזת לא תקינה למספר
 ✔️ יותר גמיש ונכון לפעולות שעלולות להיכשל (כמו קריאת קובץ, חיבור לאינטרנט)
 
-💡 מסקנה:
-השתמש ב־if כשאתה שולט בלוגיקה ורוצה לבדוק תנאים פשוטים.
+---
 
-השתמש ב־try-except כשאתה לא יכול להבטיח שהכול יעבוד חלק – למשל:
+## 💡 מסקנה:
 
-קבצים שלא בטוח שקיימים
+* השתמש ב־`if` כשאתה שולט בלוגיקה ורוצה לבדוק תנאים פשוטים.
+* השתמש ב־`try-except` כשאתה לא יכול להבטיח שהכול יעבוד חלק – למשל:
 
-חיבורים לרשת
-
-חישובים שעלולים להיכשל (חלוקה ב־0, המרות טיפוסים)
+  * קבצים שלא בטוח שקיימים
+  * חיבורים לרשת
+  * חישובים שעלולים להיכשל (חלוקה ב־0, המרות טיפוסים)
