--- a/03_control_flow/01.0_if_else.md
+++ b/03_control_flow/01.0_if_else.md
@@ -54,6 +54,14 @@ if age >= 18:
         print("Welcome to the event")
 ```
 
+מתי elif עדיף ומתי if עדיף?
+
+| צורה                  | מתי משתמשים                                 | מה היא אומרת                         |
+| --------------------- | ------------------------------------------- | ------------------------------------ |
+| `if ...` ואז `if ...` | כאשר שני התנאים נבדקים **תמיד** ו**נפרדים** | כל תנאי עומד לבד                     |
+| `if ... elif ...`     | כאשר רק **אחד** מהתנאים אמור להתבצע         | אם הראשון התקיים – השני לא נבדק בכלל |
+
+
 ### תנאי מקוצר (inline)
 ```python
 x = 10
@@ -70,6 +78,3 @@ print("x is greater") if x > y else print("y is greater")
 1. מתי נשתמש ב־`elif` ולא רק ב־`if`?  
 2. מה יקרה אם לא נכתוב נקודתיים אחרי `if`?  
 3. האם אפשר לכתוב `if` בתוך `if`?
-
-## 🧩 קבצים נלווים
-אין צורך בקבצים חיצוניים לפרק זה.
