--- a/16_numpy_functions/01.0_numpy_cheat_sheet.md
+++ b/16_numpy_functions/01.0_numpy_cheat_sheet.md
@@ -6,6 +6,92 @@ import numpy as np
 
 ---
 
+
+### 🔹 יצירת מערכים (Arrays Creation)
+
+```python
+np.array([1, 2, 3])             # יצירת מערך רגיל
+np.zeros((2, 3))                # מערך אפסים בגודל נתון
+np.ones((3, 3))                 # מערך של 1-ים
+np.full((2, 2), 7)              # מערך מלא במספר מסוים
+np.eye(3)                       # מטריצת יחידה (Identity Matrix)
+np.arange(0, 10, 2)             # רצף מספרים עם צעד
+np.linspace(0, 1, 5)            # 5 ערכים בין 0 ל־1 (כולל)
+np.random.rand(2, 3)            # מספרים רנדומליים בין 0 ל־1 (מטריצה)
+np.random.randint(0, 10, (2, 3))# מספרים רנדומליים שלמים בטווח
+```
+
+---
+
+### 🔹 צורות ושינויי צורה (Shape & Reshape)
+
+```python
+x.shape                # גודל המטריצה (שורות, עמודות)
+x.reshape(3, 2)        # שינוי צורת המערך
+x.ravel()              # שיטוח למערך 1D
+x.T                    # טרנספוז (החלפת שורות ועמודות)
+np.expand_dims(x, axis=0) # הוספת מימד חדש
+np.squeeze(x)          # הסרת מימדים מיותרים
+```
+
+---
+
+### 🔹 אינדוקס וחתכים (Indexing & Slicing)
+
+```python
+x[0]                   # איבר ראשון
+x[-1]                  # איבר אחרון
+x[1:4]                 # חתך חלקי מהמערך
+x[:3]                  # שלושה ראשונים
+x[::2]                 # כל איבר שני
+x[:, 1]                # כל השורות, עמודה שנייה
+x[1, :]                # שורה שנייה, כל העמודות
+```
+
+---
+
+### 🔹 Broadcasting – הרחבת ממדים אוטומטית
+
+```python
+a = np.array([1, 2, 3])
+b = np.array([[1], [2], [3]])
+a + b                  # חיבור עם הרחבת ממדים אוטומטית
+```
+
+---
+
+### 🔹 טיפול בערכים חסרים
+
+```python
+np.isnan(x)            # האם ערך הוא NaN
+np.nan_to_num(x)       # החלפת NaN ב־0 (או ערך אחר)
+np.nanmean(x)          # ממוצע שמתעלם מ־NaN
+```
+
+---
+
+### 🔹 שמירה וטעינה של קבצים
+
+```python
+np.save('file.npy', x)         # שמירה לקובץ בפורמט NumPy
+x = np.load('file.npy')        # טעינה מקובץ NumPy
+np.savetxt('file.txt', x)      # שמירה לקובץ טקסט
+x = np.loadtxt('file.txt')     # טעינה מקובץ טקסט
+```
+
+---
+
+### 🔹 מידע ו־Debugging
+
+```python
+x.dtype                # סוג הנתונים
+x.ndim                 # מספר מימדים
+x.size                 # מספר איברים
+x.itemsize             # גודל כל איבר (בבתים)
+```
+
+---
+
 ## 🔹 פעולות מתמטיות בסיסיות
 ```python
 np.add(a, b)        # חיבור איבר־איבר
@@ -129,4 +215,3 @@ def custom(x): return x + 1
 f = np.frompyfunc(custom, 1, 1)
 print(f([1, 2, 3]))  # ['2' '3' '4']
 ```
-
