--- a/01_basics/02.0_syntax.md
+++ b/01_basics/02.0_syntax.md
@@ -1,7 +1,13 @@
 # 📘 תחביר – Syntax
 
 ## ✨ הסבר
-תחביר זה כמו כללי המשחק. בדיוק כמו שבמשחק צריך לדעת מתי תורכם ומתי אסור לעבור קו – גם בפייתון יש חוקים ברורים. אם שומרים עליהם – הקוד רץ חלק. אם לא – מקבלים שגיאה מהמחשב.
+תחביר זה כמו כללי המשחק. 
+
+בדיוק כמו שבמשחק צריך לדעת מתי תורכם ומתי אסור לעבור קו – גם בפייתון יש חוקים ברורים. 
+
+אם שומרים עליהם – הקוד רץ חלק.
+
+אם לא – מקבלים שגיאה מהמחשב.
 
 ## 🧠 מה נלמד בפרק הזה?
 - איך נראית שורת קוד תקינה בפייתון  
