--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -2,7 +2,8 @@
 
 ## ✨ הסבר
 משתנה הוא כמו קופסה שיש לה שם – ואנחנו יכולים לשים בתוכה משהו.  
-אפשר לשים שם מילה, מספר, או כל דבר אחר. וכל פעם שנרצה להשתמש במה ששמנו – פשוט נשתמש בשם של הקופסה!
+אפשר לשים שם מילה, מספר, או כל דבר אחר. 
+וכל פעם שנרצה להשתמש במה ששמנו – פשוט נשתמש בשם של הקופסה!
 
 ## 🧠 מה נלמד בפרק הזה?
 - איך יוצרים משתנה  
