--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -1,7 +1,7 @@
 # 📘 סוגי נתונים – Data Types
 
 ## ✨ הסבר
-לכל דבר שאנחנו שומרים במחשב יש סוג – כמו שמים הם נוזל, ואבן היא מוצק.  
+לכל דבר שאנחנו שומרים במחשב יש סוג – כמו ש- "מים" הם נוזל, ו "אבן" היא מוצק.  
 בפייתון, מספרים הם סוג אחד, מילים הם סוג אחר, ורשימות הן משהו שלישי לגמרי.  
 אם נזהה נכון את הסוג של כל דבר – נוכל לעשות איתו בדיוק את מה שאנחנו רוצים.
 
