--- a/11_oop_intro/07.0_DesignPatterns_Identification_Table_Expanded.md
+++ b/11_oop_intro/07.0_DesignPatterns_Identification_Table_Expanded.md
@@ -1,21 +1,21 @@
-הטבלה שלפניך מרכזת את כל דפוסי העיצוב (Design Patterns) הקלאסיים בעולם התוכנה – בצורה חכמה, ברורה וממוקדת לזיהוי ושימוש מיידי.
+הטבלה שלפניך מרכזת את כל דפוסי העיצוב (Design Patterns) הקלאסיים בעולם התוכנה
+
+בצורה חכמה, ברורה וממוקדת לזיהוי ושימוש מיידי.
 
 מטרתה לאפשר לך, כמפתח או כמרצה, לזהות בקלות כל דפוס עיצוב בתוך קוד אמיתי, להבין מתי להשתמש בו, כיצד הוא בנוי, ומהם הדגשים החשובים בעת ההטמעה שלו.
+
 היא מושלמת ללמידה, לבחינות, להרצאות, או לפיתוח תוכנה ברמה מקצועית.
 
 לכל דפוס תמצא בטבלה:
 
 🔸 מתי נכון להשתמש בו – תרחיש קלאסי בעולם האמיתי.
+
 🔸 איך לזהות אותו בקוד – סימנים שמופיעים בקוד המעידים על הדפוס.
+
 🔸 דגשים מיוחדים – נקודות שחשוב להכיר כדי ליישם אותו נכון.
+
 🔸 שם בעברית – תרגום ברור שמתאים לשיחה מקצועית או לימוד בעברית.
- 
- כאן טבלה מדויקת שמסכמת את הדרכים לזיהוי **Design Patterns** קלאסיים בצורה נגישה וברורה.
-
-להשלמה, הנה 🔹טיפים שימושיים לזיהוי דפוסים בתוך קוד אמיתי:
-
 ---
-
 🔹 **שאלות אבחון מהירות לכל דפוס**
 🔸 תוכל להשתמש בשאלות אלו במהלך קריאת קוד:
 
