--- a/01_basics/7.0_booleans.md
+++ b/01_basics/7.0_booleans.md
@@ -2,7 +2,8 @@
 
 ## ✨ הסבר
 בוליאן זה סוג מידע שיכול להיות רק אחד משני דברים: **True** (אמת) או **False** (שקר).  
-כמו מתג של אור – או שהוא דולק או שהוא כבוי. בעזרת בוליאנים אנחנו שואלים שאלות והמחשב עונה לנו כן או לא.
+כמו מתג של אור – או שהוא דולק או שהוא כבוי. 
+בעזרת בוליאנים אנחנו שואלים שאלות והמחשב עונה לנו כן או לא.
 
 ## 🧠 מה נלמד בפרק הזה?
 - מהו ערך בוליאני  
