--- a/01_basics/6.2_strings_exercises.md
+++ b/01_basics/6.2_strings_exercises.md
@@ -31,3 +31,65 @@ second = "World"
 - זכרו להשתמש באנגלית בתוך הקוד בלבד.  
 - התרגילים נועדו לעזור להבין פעולות בסיסיות עם מחרוזות – תרגול חשוב להבנה.  
 - השתמשו במתודות שראינו כמו: `len()`, `strip()`, `replace()`, `split()`, `join()` וכו'.
+
+
+
+### 📘 תרגול: חיתוך מחרוזות (Slicing)
+
+---
+
+#### 🧪 משימה 1: חיתוך לפי טווחים
+
+בהתבסס על:
+
+```python
+text = "SlicingIsPowerful"
+```
+
+🔹 כתוב את הביטויים שיחזירו את המחרוזות הבאות:
+
+1. `"Slicing"`
+2. `"Powerful"`
+3. `"Is"`
+4. `"icing"`
+5. `"SlicingIs"`
+
+---
+
+#### 🧪 משימה 2: שימוש בשלבים (step)
+
+באמצעות אותה מחרוזת:
+
+1. החזר כל תו שני
+2. החזר כל תו שלישי מהתו השני ואילך
+3. החזר את המחרוזת **הפוכה**
+4. החזר את המילה `"Power"` מבלי לכתוב את הספרות ישירות (רק ביחס לאינדקסים של "f")
+
+---
+
+#### 🧪 משימה 3: מקרים גבוליים
+
+בהנחה:
+
+```python
+word = "Data"
+```
+
+מה תחזיר כל אחת מהפקודות:
+
+1. `word[10:]`
+2. `word[-10:]`
+3. `word[2:2]`
+4. `word[::-2]`
+5. `word[::0]`
+
+---
+
+#### 🧪 אתגר – חיתוך דינאמי
+
+כתוב פונקציה שמקבלת מחרוזת, ומחזירה:
+
+1. את שלושת התווים האמצעיים (אם יש מספר זוגי – שניים)
+2. את כל התווים מלבד הראשון והאחרון
+3. את התווים ההפוכים בדילוג של 3
+
