--- a/01_basics/6.3_strings_solutions.md
+++ b/01_basics/6.3_strings_solutions.md
@@ -67,3 +67,59 @@ print(word.count("a"))  # 3
 - המתודות של מחרוזות הן כלים מאוד חשובים לעבודה עם טקסטים.  
 - תמיד בדקו את התוצאה שאתם מקבלים – זה יעזור להבין מה בדיוק כל מתודה עושה.  
 - זכרו: מחרוזות לא משתנות – כל פעולה יוצרת מחרוזת חדשה.
+
+
+---
+
+### 📘 פתרונות: חיתוך מחרוזות (Slicing)
+
+---
+
+#### ✅ פתרון משימה 1:
+
+1. `text[0:7]`
+2. `text[8:]`
+3. `text[7:9]`
+4. `text[3:8]`
+5. `text[:9]`
+
+---
+
+#### ✅ פתרון משימה 2:
+
+1. `text[::2]`
+2. `text[1::3]`
+3. `text[::-1]`
+4. `start = text.index("P"); end = text.index("f"); text[start:end]`
+
+---
+
+#### ✅ פתרון משימה 3:
+
+1. `''`
+2. `'Data'`
+3. `''`
+4. `'at'`
+5. ❌ תגרום לשגיאה: `ValueError: slice step cannot be zero`
+
+---
+
+#### ✅ פתרון אתגר:
+
+```python
+def slice_tasks(s):
+    mid = len(s) // 2
+    if len(s) % 2 == 0:
+        middle = s[mid-1:mid+1]
+    else:
+        middle = s[mid-1:mid+2]
+    
+    inner = s[1:-1]
+    reversed_by_3 = s[::-3]
+
+    return middle, inner, reversed_by_3
+
+# דוגמה
+print(slice_tasks("Powerful"))  # ('er', 'owerfu', 'lwu')
+```
+
