--- a/01_basics/6.0_Str_Slicing.md
+++ b/01_basics/6.0_Str_Slicing.md
@@ -5,12 +5,12 @@
 **Slicing** מאפשר לנו לשלוף תווים מתוך מחרוזת (או רשימה/טווח) לפי **טווח אינדקסים**:
 
 ```python
-text[start:end:step]
+text[Start:Stop:Step]
 ```
 
-* `start` – מאיזה אינדקס להתחיל (כלול)
-* `end` – איפה לעצור (לא כלול!)
-* `step` – באיזה דילוג (ברירת מחדל: 1)
+* `Start` – מאיזה אינדקס להתחיל (כלול)
+* `Stop` – איפה לעצור (לא כלול!)
+* `Step` – באיזה דילוג (ברירת מחדל: 1)
 
 ---
 
