--- a/02_operators/9.0_Logic_Gates_Explained.md
+++ b/02_operators/9.0_Logic_Gates_Explained.md
@@ -114,7 +114,7 @@ print(A ^ B)  # True
 
 #### 🟥 שער NAND (לא־וגם)
 
-* ההפך של AND: מחזיר 1 בכל מקרה **חוץ** מ־1 AND 1
+* ההפך המוחלט של AND: מחזיר 1 בכל מקרה **חוץ** מ־1 AND 1
 
 🔸 טבלת אמת:
 
@@ -135,7 +135,7 @@ not (A and B)
 
 #### 🟪 שער NOR (לא־או)
 
-* ההפך של OR: מחזיר 1 רק אם **כל הקלטים 0**
+* ההפך המוחלט של OR: מחזיר 1 רק אם **כל הקלטים 0**
 
 🔸 טבלת אמת:
 
@@ -156,7 +156,7 @@ not (A or B)
 
 #### ⬛ שער XNOR (שוויון לוגי)
 
-* ההפך של XOR: מחזיר 1 אם הקלטים זהים
+* ההפך המוחלט של XOR: מחזיר 1 אם הקלטים זהים
 
 🔸 טבלת אמת:
 
