--- a/03_control_flow/03.1_for_loops_exercises.md
+++ b/03_control_flow/03.1_for_loops_exercises.md
@@ -2,22 +2,22 @@
 
 🧪 תרגילים
 
-1. כתבו לולאת for שמדפיסה את המספרים מ־0 עד 4.
+1.  כתבו לולאת for שמדפיסה את המספרים מ־0 עד 4.
 
-🔹 כתבו לולאת for שמדפיסה את המספרים מ־1 עד 5 (כולל).
+2.  כתבו לולאת for שמדפיסה את המספרים מ־1 עד 5 (כולל).
 
-🔹 כתבו לולאה שעוברת על המילה `"Python"` ומדפיסה כל תו בשורה נפרדת.
+3.  כתבו לולאה שעוברת על המילה `"Python"` ומדפיסה כל תו בשורה נפרדת.
 
-🔹 כתבו לולאה שמדפיסה כל פרי מתוך הרשימה:
+4.  כתבו לולאה שמדפיסה כל פרי מתוך הרשימה:
 `fruits = ["apple", "banana", "cherry"]`
 
-🔹 כתבו לולאה שמדפיסה את המספרים מ־0 עד 9 אך עוצרת (break) כשהמספר שווה ל־3.
+5.  כתבו לולאה שמדפיסה את המספרים מ־0 עד 9 אך עוצרת (break) כשהמספר שווה ל־3.
 
-🔹 כתבו לולאה שמדפיסה את המספרים מ־0 עד 6 אך מדלגת (continue) על המספר 5.
+6.  כתבו לולאה שמדפיסה את המספרים מ־0 עד 6 אך מדלגת (continue) על המספר 5.
 
-🔹 כתבו לולאה שמדפיסה את המספרים מ־0 עד 4, ולאחר מכן מדפיסה את המילה `"Done!"` – רק אם הלולאה הסתיימה בלי break.
+7.  כתבו לולאה שמדפיסה את המספרים מ־0 עד 4, ולאחר מכן מדפיסה את המילה `"Done!"` – רק אם הלולאה הסתיימה בלי break.
 
-🔹 כתבו לולאה שמדפיסה את כל המספרים הזוגיים מ־0 עד 10 (כולל).
+8.  כתבו לולאה שמדפיסה את כל המספרים הזוגיים מ־0 עד 10 (כולל).
 
 ---
 
