--- a/03_control_flow/03.0_for_loops.md
+++ b/03_control_flow/03.0_for_loops.md
@@ -62,6 +62,15 @@ else:
     print("Finished loop!")
 ```
 
+### שימוש ב- enumerate() בפייתון מאפשרת לך גם לקבל את האינדקס וגם את הערך של כל איבר ברשימה בלולאה — מבלי להשתמש ב־range(len(...)).
+
+```python
+fruits = ["apple", "banana", "cherry"]
+
+for index, fruit in enumerate(fruits):
+    print(index, fruit)
+```
+
 ## 💡 טיפים מתקדמים
 - `range(n)` יוצר סדרת מספרים מ־0 עד n-1  
 - `for` מעולה למבנים סופיים (רשימות, מחרוזות, טווחים)  
