--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -1,4 +1,4 @@
-# 📘 מחרוזות – Strings
+# 📘טקסט – מחרוזות – Strings
 
 ## ✨ הסבר
 מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים – כמו שם, משפט, או אפילו רווח.  
