--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -22,6 +22,9 @@ name = "Dvir"
 first = "Hello"
 second = "World"
 print(first + " " + second)  # Hello World
+print(first + " " + second)  # Hello World
+print(first, second)  # Hello World
+print(f"{first} {second} How are you today?")  # Hello World
 ```
 
 ### אורך מחרוזת
