--- a/01_basics/8.0_Input_Function.md
+++ b/01_basics/8.0_Input_Function.md
@@ -2,7 +2,7 @@
 
 ### ✨ הסבר
 
-`input()` היא פונקציה שמאפשרת **לקבל קלט מהמשתמש** – כלומר שהמשתמש יקליד ערך, ואנחנו נוכל להשתמש בו בתוך התוכנית.
+ו`input()` היא פונקציה שמאפשרת **לקבל קלט מהמשתמש** – כלומר שהמשתמש יקליד ערך, ואנחנו נוכל להשתמש בו בתוך התוכנית.
 
 
 * הפונקציה תמיד מחזירה **מחרוזת (`str`)** – גם אם המשתמש מקליד מספר.
