--- a/01_basics/8.0_Input_Function.md
+++ b/01_basics/8.0_Input_Function.md
@@ -2,11 +2,13 @@
 
 ### ✨ הסבר
 
-ו`input()` היא פונקציה שמאפשרת **לקבל קלט מהמשתמש** – כלומר שהמשתמש יקליד ערך, ואנחנו נוכל להשתמש בו בתוך התוכנית.
+ו`input()` היא פונקציה שמאפשרת **לקבל קלט מהמשתמש** – 
+
+כלומר שהמשתמש יקליד ערך, ואנחנו נוכל להשתמש בו בתוך התוכנית.
 
 
 * הפונקציה תמיד מחזירה **מחרוזת (`str`)** – גם אם המשתמש מקליד מספר.
-* 
+  
 * ניתן לשים בתוך `input()` טקסט, כדי להציג שאלה או בקשה מהמשתמש.
 
 ---
