--- a/02_operators/8.0_operators.md
+++ b/02_operators/8.0_operators.md
@@ -58,6 +58,7 @@ x /= 3
 ```python
 text = "Python"
 print("P" in text)    # True
+print("p" in text)    # False
 print("z" not in text)  # True
 ```
 
