--- a/03_control_flow/01.0_if_else.md
+++ b/03_control_flow/01.0_if_else.md
@@ -52,6 +52,10 @@ has_ticket = True
 if age >= 18:
     if has_ticket:
         print("Welcome to the event")
+    else:
+        print("Go buy a ticket")
+else:
+    print("You are minor")
 ```
 
 מתי elif עדיף ומתי if עדיף?
