--- a/04_collections/01.0_lists.md
+++ b/04_collections/01.0_lists.md
@@ -2,7 +2,7 @@
 
 ## ✨ הסבר
 
-רשימה היא כמו קופסה שיכולה להכיל הרבה פריטים – מספרים, מילים, ואפילו רשימות אחרות.  
+רשימה היא כמו קופסה גדולה שיכולה להכיל הרבה פריטים – מספרים, מילים, ואפילו רשימות אחרות.  
 אפשר להוסיף אליה פריטים, למחוק מהם, ולשנות את הסדר או התוכן.  
 היא מאוד גמישה, כמו מין ארגז כלים דינמי שאנחנו בונים לבד.
 
