--- a/04_collections/01.0_lists.md
+++ b/04_collections/01.0_lists.md
@@ -89,3 +89,40 @@ if "banana" in fruits:
 1. איך אפשר להוסיף פריט לסוף הרשימה?
 2. מה קורה אם ננסה לגשת ל־`fruits[10]` כשיש רק 3 פריטים?
 3. מה ההבדל בין `remove()` ל־`pop()`?
+---
+``` python
+# Create a list of fruits
+#            0         1         2
+fruits = ["apple", "banana", "cherry"]
+print(fruits)
+print(len(fruits))
+# Access the first item (index 0)
+print(fruits[0])  # Output: apple
+print(fruits[2])  # Output: apple
+
+# Change the second item
+fruits[2] = "orange"
+print(fruits)
+
+# Add a new item at the end
+fruits.append("grape")
+print(fruits)
+
+# Insert at index 1
+fruits.insert(1, "kiwi")
+print(fruits)
+print(len(fruits))
+
+fruits.remove("apple")
+print(fruits)
+
+# Remove the last item
+fruits.pop()
+print(fruits)
+
+fruits.pop(0)
+print(fruits)
+
+# Get the number of items in the list
+print(len(fruits))
+```
