--- a/04_collections/02.0_tuples.md
+++ b/04_collections/02.0_tuples.md
@@ -58,3 +58,33 @@ numbers = tuple(nums)
 1. מה ההבדל בין טאפלה לרשימה?
 2. איך יוצרים טאפלה עם פריט אחד בלבד?
 3. למה כדאי להשתמש בטאפלה במקום ברשימה?
+---
+``` python
+# Create a tuple of numbers
+#          0  1  2
+numbers = (1, 2, 3)
+print(numbers)
+print(type(numbers))
+
+# Access the second item
+print(numbers[1])  # Output: 2
+
+# Must include a comma to make it a tuple
+single = (5,)
+print(type(single)) # (5,)
+
+single1 = (5) # 5
+print(type(single1))
+
+# Convert tuple to list
+nums = list(numbers)
+print(nums)
+print(type(nums))
+
+# add the num 4 into the tuple
+nums.append(4)
+
+nums = tuple(nums)
+print(nums)
+print(type(nums))
+```
