--- a/04_collections/03.0_sets.md
+++ b/04_collections/03.0_sets.md
@@ -93,3 +93,28 @@ print(a ^ b)  # {1, 3}
 1. איך אפשר לוודא שאין כפילויות ברשימה?
 2. מה ההבדל בין `remove()` ל־`discard()`?
 3. מה מחזירה הפעולה `a & b` בין שתי קבוצות?
+
+---
+``` python
+# Create a set of fruits
+fruits = {"apple", "banana", "cherry"}
+print(type(fruits))
+print(fruits)
+
+# Duplicates are removed automatically
+nums = {1, 2, 2, 3}  # {1, 2, 3}
+print(type(nums))
+print(nums)
+
+# Add an item
+fruits.add("orange")
+print(fruits)
+
+# Remove item (raises error if not found)
+fruits.remove("banana")
+print(fruits)
+
+# Safe remove (no error if not found)
+fruits.discard("pear")
+print(fruits)
+```
