--- a/04_collections/04.1_dictionaries.md
+++ b/04_collections/04.1_dictionaries.md
@@ -86,3 +86,30 @@ for key, value in person.items():
 1. מה ההבדל בין שימוש ב־`[]` לבין `get()`?
 2. איך מוסיפים מפתח חדש למילון?
 3. איך עוברים על כל הזוגות של מפתח וערך?
+---
+``` python
+# Create a dictionary
+person = {
+    "name": "Alice",
+    "age": 25,
+    "city": "Tel Aviv"
+}
+print(type(person))
+print(person)
+
+# Access a value
+print(person["name"])  # Output: Alice
+
+# Change value
+person["name"] = "Dvir"
+print(person)
+
+# Add a new key-value pair
+person["email"] = "dvir@example.com"
+print(person)
+
+
+# Remove key
+del person["city"]
+print(person)
+```
