--- a/01_basics/01.0_introduction.md
+++ b/01_basics/01.0_introduction.md
@@ -39,6 +39,12 @@ print("My name is Dvir.")
 print("I love Python!")
 ```
 
+### ריצת קוד
+- בפייתון הקוד מתחיל בשורה העליונה ביותר
+- ומסתיים ב2 מצבים
+1. הגענו לשורה האחרונה(התחתונה ביותר(
+2. נעצרנו בשגיאה
+
 ## 💡 טיפים ותוספות מתקדמות
 - קבצים של פייתון מסתיימים ב־`.py`  
 - מומלץ להשתמש בעורכים אונליין כמו https://replit.com/ או להתקין את פייתון מהמחשב האישי דרך https://python.org  
