--- a/01_basics/02.0_syntax.md
+++ b/01_basics/02.0_syntax.md
@@ -28,6 +28,13 @@ print("Welcome to Python!")
 print("This will be printed")
 ```
 
+## תגובה
+- תגובה זוהי שורה כחלק מקוד הפייתון שלא רצה/עובדת כחלק מהקוד
+- היא בעלת 3 שימושים
+1. הסבר קצר לקוד שרשמתי
+2. לרשום משימות לעתיד
+3. לבטל שורות שרשמתי על מנת להשתמש בהם בעתיד
+
 ### חשיבות הרווחים (Indentation)
 ```python
 if 5 > 2:
