--- a/01_basics/01.0_introduction.md
+++ b/01_basics/01.0_introduction.md
@@ -41,7 +41,7 @@ print("I love Python!")
 
 ### ריצת קוד
 - בפייתון הקוד מתחיל בשורה העליונה ביותר
-- ומסתיים ב2 מצבים
+- ומסתיים(נעצר) ב2 מצבים
 1. הגענו לשורה האחרונה(התחתונה ביותר(
 2. נעצרנו בשגיאה
 
