--- a/01_basics/02.0_syntax.md
+++ b/01_basics/02.0_syntax.md
@@ -30,7 +30,7 @@ print("This will be printed")
 
 ## תגובה
 - תגובה זוהי שורה כחלק מקוד הפייתון שלא רצה/עובדת כחלק מהקוד
-# היא מתחילה תמיד בסולמית/אשתג
+- היא מתחילה תמיד בסולמית/אשתג
 - היא בעלת 3 שימושים
 1. הסבר קצר לקוד שרשמתי
 2. לרשום משימות לעתיד
