--- a/01_basics/01.0_introduction.md
+++ b/01_basics/01.0_introduction.md
@@ -42,8 +42,8 @@ print("I love Python!")
 ### ריצת קוד
 - בפייתון הקוד מתחיל בשורה העליונה ביותר
 - ומסתיים(נעצר) ב2 מצבים
-1. הגענו לשורה האחרונה(התחתונה ביותר(
-2. נעצרנו בשגיאה
+1. הגענו לשורה האחרונה(התחתונה ביותר( -זאת אומרת שכל הקוד עבד
+2. נעצרנו בשגיאה - זאת אומרת שהקוד הפסיק בשורה שיש בה שגיאה ולא ימשיך לשאר שורות הקוד הבאות
 
 ## 💡 טיפים ותוספות מתקדמות
 - קבצים של פייתון מסתיימים ב־`.py`  
