--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -1,7 +1,7 @@
 # 📘 משתנים – Variables
 
 ## ✨ הסבר
-משתנה הוא כמו קופסה שיש לה שם – ואנחנו יכולים לשים בתוכה משהו.  
+משתנה הוא כמו קופסה שיש לה שם – ואנחנו יכולים לשים בתוכה משהו ערך.  
 
 אפשר לשים שם מילה, מספר, או כל דבר אחר. 
 
