--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -5,7 +5,7 @@
 
 אפשר לשים שם מילה, מספר, או כל דבר אחר. 
 
-וכל פעם שנרצה להשתמש במה ששמנו – פשוט נשתמש בשם של הקופסה!
+וכל פעם שנרצה להשתמש במה ששמנו (הערך) – פשוט נשתמש בשם של הקופסה!
 
 ## 🧠 מה נלמד בפרק הזה?
 - איך יוצרים משתנה  
