--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -1,7 +1,7 @@
 # 📘טקסט – מחרוזות – Strings
 
 ## ✨ הסבר
-מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים – כמו שם, משפט, או אפילו רווח.  
+מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים מספרים כל דבר שנמצא בין גרשיים – כמו שם, משפט, או אפילו רווח.  
 בפייתון אנחנו כותבים מחרוזות בתוך גרשיים, וככה המחשב יודע שזה טקסט ולא מספר.
 
 ## 🧠 מה נלמד בפרק הזה?
