--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -3,6 +3,7 @@
 ## ✨ הסבר
 מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים מספרים כל דבר שנמצא בין גרשיים – כמו שם, משפט, או אפילו רווח.  
 בפייתון אנחנו כותבים מחרוזות בתוך גרשיים, וככה המחשב יודע שזה טקסט ולא מספר.
+- אנחנו נגיע פונקציות שישנו שיעדכנו את הטקסט הקיים בשם המשתנה שערכו מסוג טקסט
 
 ## 🧠 מה נלמד בפרק הזה?
 - איך יוצרים מחרוזת  
