--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -46,6 +46,8 @@ text = "Python"
 print(len(text))  # 6
 ```
 
+## פונקציות של טקסט
+
 ### אותיות גדולות/קטנות
 ```python
 print(text.upper())  # PYTHON
