--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -15,9 +15,12 @@
 ## ✨ הסבר
 משתנה הוא כמו קופסה שיש לה שם – ואנחנו יכולים לשים בתוכה משהו ערך.  
 
-אפשר לשים שם מילה, מספר, או כל דבר אחר. 
+אפשר לשים שם, מילה, מספר, או כל דבר אחר. 
 
 וכל פעם שנרצה להשתמש במה ששמנו (הערך) – פשוט נשתמש בשם של הקופסה!
+
+שם הקופסא יהיה מופרד בקו תחתון על מנת שלא נקבל שגיאה
+
 
 ## 🧠 מה נלמד בפרק הזה?
 - איך יוצרים משתנה  
