--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -17,9 +17,9 @@
 
 אפשר לשים שם, מילה, מספר, או כל דבר אחר. 
 
-וכל פעם שנרצה להשתמש במה ששמנו (הערך) – פשוט נשתמש בשם של הקופסה!
+וכל פעם שנרצה להשתמש בערך נרשום את שם הקופסא
 
-שם הקופסא יהיה מופרד בקו תחתון על מנת שלא נקבל שגיאה
+שם הקופסא יהיה מופרד בקו תחתון ובלי גרשיים, על מנת שלא נקבל שגיאה
 
 
 ## 🧠 מה נלמד בפרק הזה?
