--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -14,8 +14,10 @@
 
 ## ✨ הסבר
 לכל דבר שאנחנו שומרים בפייתון יש סוג – כמו ש- "מים" הם נוזל, ו "אבן" היא מוצק.  
-בפייתון, מספרים הם סוג אחד, מילים הם סוג אחר, ורשימות הן משהו שלישי לגמרי.  
-אם נזהה נכון את הסוג של כל דבר – נוכל לעשות איתו בדיוק את מה שאנחנו רוצים.
+
+בפייתון, מספרים הם סוג אחד,טקסט, בוליאנים, רשימות ,סטים, מילונים, טאפלים הם סוג אחר לגמרי.
+
+אם נזהה נכון את הסוג – נוכל לעשות איתו בדיוק את התפקיד שלו.
 
 ## 🧠 מה נלמד בפרק הזה?
 - מהם הסוגים הבסיסיים של נתונים בפייתון  
