--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -28,18 +28,20 @@
 
 ### מספרים (Integers ו-Floats)
 ```python
-age = 25        # Integer
-height = 1.75   # Float
+age = 25        # Integer שלמים
+height = 1.75   # Float עשרונים
 ```
 
-### מחרוזות (Strings)
+### מחרוזות (Strings) טקסט 
 ```python
 name = "Dvir"
+# כל דבר בין זוג גרשיים
 ```
 
 ### בוליאנים (Booleans)
 ```python
 is_student = True
+# אמת או שקר False
 ```
 
 ### בדיקת סוג הנתון
