--- a/06_functions/01.0_functions.md
+++ b/06_functions/01.0_functions.md
@@ -16,8 +16,8 @@
 
 פונקציה היא כמו מכונה קטנה שאנחנו בונים.  
 אנחנו שמים לה קלט – והיא מחזירה לנו תוצאה.  
-במקום לכתוב שוב ושוב את אותו קוד, אנחנו עוטפים אותו בתוך פונקציה – ואז פשוט "קוראים לה" מתי שצריך.  
-בדיוק כמו שאומרים למיקרוגל: “חמם” – בלי להסביר לו כל פעם איך.
+במקום לכתוב שוב ושוב את אותו קוד, אנחנו עוטפים אותו בתוך פונקציה – ואז פשוט "קוראים לה" בשם שנתנו מתי שצריך.  
+בדיוק כמו שאומרים למיקרוגל: “חמם” – בלי להסביר לו כל פעם מחדש איך.
 
 ## 🧠 מה נלמד בפרק הזה?
 - איך כותבים פונקציה ב־Python
