--- a/06_functions/01.0_functions.md
+++ b/06_functions/01.0_functions.md
@@ -18,6 +18,7 @@
 אנחנו שמים לה קלט – והיא מחזירה לנו תוצאה.  
 במקום לכתוב שוב ושוב את אותו קוד, אנחנו עוטפים אותו בתוך פונקציה – ואז פשוט "קוראים לה" בשם שנתנו מתי שצריך.  
 בדיוק כמו שאומרים למיקרוגל: “חמם” – בלי להסביר לו כל פעם מחדש איך.
+כל מה שנרצה שיהיה בתוך הפונקציה, יהיה בהנחה לאחר שם הפונקציה
 
 ## 🧠 מה נלמד בפרק הזה?
 - איך כותבים פונקציה ב־Python
