--- a/06_functions/01.0_functions.md
+++ b/06_functions/01.0_functions.md
@@ -40,6 +40,8 @@ greet()
 ```
 
 ### פונקציה עם פרמטר
+לאחר שרשום את שם הפונקציה בין הסוגריים נרשום פרמטר נוכל עוד פרמטרים
+נעביר את הפרמטרים בקריאה לפונקציה
 ```python
 def greet(name):
     print("Hello", name)
