--- a/06_functions/01.0_functions.md
+++ b/06_functions/01.0_functions.md
@@ -42,6 +42,7 @@ greet()
 ### פונקציה עם פרמטר
 לאחר שרשום את שם הפונקציה בין הסוגריים נרשום פרמטר נוכל עוד פרמטרים
 נעביר את הפרמטרים בקריאה לפונקציה
+נוכל להעביר את הפרמטר כשם משתנה או כערך
 ```python
 def greet(name):
     print("Hello", name)
